[project]
name = "odpdown"
version = "0.5.1"
description = "Generate OpenDocument Presentation (odp) files from markdown"
authors = [
    {name = "Thorsten Behrens", email = "tbehrens@acm.org"},
]
maintainers = [
    {name = "Thorsten Behrens", email = "tbehrens@acm.org"},
]
dependencies = [
    "beautifulsoup4>=4.8.2",
    "cram>=0.6",
    "mistune<2.0.0,>0.7.1",
    "odfdo>=3.7.7",
    "pillow>=2.0",
    "pygments>=1.6",
    "setuptools>=78.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "BSD License"}
keywords = ["markdown", "presentation", "libreoffice", "office"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/thorstenb/odpdown.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
